golang/examples/array-index/array_index.go
package main

import (
	"fmt"
)

func main() {
	var res = [3]int{7, 5, 9}

	fmt.Println(res)
	i := 1
	j := 4
	fmt.Println(res[i])
	fmt.Println(res[j])
}
